--- a/languages/pl.json
+++ b/languages/pl.json
@@ -10,7 +10,8 @@
 	"error_wrong_user_title": "Brak wiadomości prywatnych od",
 	"error_wrong_user_desc": "Nie znalazłem żadnej wiadomości prywatnej od tego użytkownika.\nUpewnij się, że nick został wprowadzony poprawnie i spróbuj ponownie.", 
 	"user_messages_title": "Wiadomości od użytkownika",
-	"nicknames_list_title": "Znalezione nicki",
+	"nicknames_list_title": "Lista graczy",
+	"nicknames_list_desc": "Znalezione nicki",
 	"new_message_title": "Dostałeś wiadomość!",
 	"new_message_id_title": "ID nadawcy",
 	"new_message_content_title": "Wiadomość",
