--- a/languages/en.json
+++ b/languages/en.json
@@ -13,7 +13,7 @@
 	"nicknames_list_title": "List of users",
 	"nicknames_list_desc": "Found users",
 	"new_message_title": "You got a new message!",
-	"new_message_id_title": "Senders ID",
+	"new_message_id_title": "Sender's ID",
 	"new_message_content_title": "Message",
 	"new_message_time": "Time",
 	"new_message_empty": "empty message"
